--- a/wild_animals/index.html
+++ b/wild_animals/index.html
@@ -24,7 +24,7 @@
     <p><b>Height:</b> 6m</p>
     <br>
 
-    <h2>Elehant</h2>
+    <h2>Elephant</h2>
     <img src="pictures/elephant.jpg" width="100px" alt="">
     <p><b>Area:</b> Africa, Asia</p>
     <p><b>Weight:</b> 4000-7000kg</p>
