feat(front): Add new section

--- a/wild_animals/index.html
+++ b/wild_animals/index.html
@@ -30,6 +30,11 @@
     <p><b>Weight:</b> 4000-7000kg</p>
     <p><b>Height:</b> 3m</p>
     <br>
+    <h2>kangaroo</h2>
+    <img src="pictures/elephant.jpg" width="100px" alt="">
+    <p><b>Area:</b> Africa, Asia</p>
+    <p><b>Weight:</b> 4000-7000kg</p>
+    <p><b>Height:</b> 3m</p>
 
   </body>
 </html>
